Revision history for Perl extension CGI::Application::Plugin::Authentication.

0.18_1 Thu Jun 25 2010
    Put OS dependent guards in certain tests.
 
0.18 Mon Jun 23 2010
    Completed test coverage for Driver and below
    TABLES parameter was not made mandatory in DBI driver.
    Fixed dependency on Test::More - must be at least version 0.90.
    Fixed handling of custom filters - now they must have a $param and a $value.
    Incorporated Christian Walde's suggested changes for compatibility with
    CGI::Application::Plugin::ActionDispatch.
    Adding tests around the HTML generated by the login_box function and
    verifying that it is taint free.
    Upped requiredment on CGI to 3.16 as that seems to cause unusual behaviour in returning
    self referring urls and further upped requirement on CGI to 3.16 as 3.15 has an
    unusual  interpretation of redirection headers.
    Fixed regular expressions in destination test to respect HTTP header CRLF conventions.

0.17  Thu Jan 21 19:16 GMT 2010
    Bug Fixes
    rt53533 - During initialization deferred checking the users credentials to the last possible moment.
    This ensures that sessions are not created unless actually required. 
    Also attempted to document which functions add session/cookie state.

    Build Fixes
    rt35030 - Upped the requirement on Apache::Htpasswd to 1.8 as this simplifies our dependency management.

0.16  Mon Jan 18 22:18 GMT 2010 
    Release dedicated to improving CPAN readiness - see RT:50670.
    Fixed spelling mistakes and added a test script that uses Test::Spelling.
    Fixed dependency on Test::Exception and added a test script that uses Test::Prereq::Build.
    Added test scripts to validate the MANIFEST file and Changes file.
    Removed files that are generated during './Build dist' from repository.
    
0.15  Tue Jan 12 15:42 GMT 2010
    Redist to fix tar format issues RT:45155 & 23705

0.14  Sun Oct 18 02:48:10 EST 2009
    Bug Fixes