@@ -2,6 +2,7 @@ Revision history for Perl extension CGI::Application::Plugin::Authentication.
 
 0.18_1 Thu Jun 25 2010
     Put OS dependent guards in certain tests.
+    Removed deprecated *_DESTINATION parameters.
  
 0.18 Mon Jun 23 2010
     Completed test coverage for Driver and below
